# Tribol

./: .gitignore  .gitlab-ci.yml  .gitmodules  .uberenv_config.json  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  RELEASE-NOTES.md  azure-pipelines.yml  config-build.py
.gitlab/: build_lassen.yml  build_quartz.yml  build_ruby.yml
cmake/: Options.cmake  SetupThirdParty.cmake  TribolCompilerFlags.cmake  TribolConfig.cmake  TribolMacros.cmake  TribolVersion.cmake  tribol-config.cmake.in
data/: LICENSE.txt  NOTICE  README.md  l-shape.mesh  two_hex_apart.mesh  two_hex_overlap.mesh
data/common_plane_parallel_1_overlap/: face1_bug.txt  face1_working.txt  face1x_bug.txt  face1y_bug.txt  face1z_bug.txt  face2_bug.txt  face2_working.txt  face2x_bug.txt  face2y_bug.txt  face2z_bug.txt  overlap_bug.txt  overlap_working.txt
data/mortar_bad_patch/: size_info  xs.txt  ym.txt  zs.txt
data/mortar_good_patch/: ixm.txt  ixs.txt  xs.txt  ys.txt  zs.txt
data/mortar_ironing/: active_nodes  fort.7777  fort.8888  ixs.txt  xs.txt  ys.txt  z_cntct_overlap_0000001.vtk  zm.txt
data/mortar_ironing_2/: dblplt000.mili  ixm.txt  size_info  xs.txt  ys.txt  z_cntct_overlap_0000001.vtk  zm.txt
data/mortar_ironing_3/: fort.7777  fort.8888  xm.txt  ys.txt  zs.txt
data/mortar_ironing_sub_mesh/: ixm.txt  ixs.txt  size_info  weights  xm.txt  ym.txt  zm.txt
data/mortar_node_on_node_sphere/: ixm.txt  ixs.txt  size_info  xs.txt  ym.txt  zs.txt
data/mortar_one_seg_rotated_square/: ixm.txt  ixs.txt  size_info  xs.txt  ym.txt  zs.txt
data/mortar_sphere/: ixs.txt  xs.txt  ys.txt  zs.txt
docs/: CMakeLists.txt
docs/doxygen/: CMakeLists.txt  Doxyfile.in
docs/sphinx/: CMakeLists.txt  conf.py  index.rst
docs/sphinx/dev_guide/: git_aliases.rst  index.rst
host-configs/: lassen-blueos_3_ppc64le_ib_p9-clang@10.0.1.cmake  quartz-toss_4_x86_64_ib-clang@14.0.6.cmake  quartz-toss_4_x86_64_ib-gcc@10.3.1.cmake  rzansel-blueos_3_ppc64le_ib_p9-clang@10.0.1.cmake  rzgenie-toss_4_x86_64_ib-clang@14.0.6.cmake  rzgenie-toss_4_x86_64_ib-gcc@10.3.1.cmake  toss_3_x86_64_ib-clang@10.0.0.cmake  toss_3_x86_64_ib-gcc@8.1.0.cmake  toss_3_x86_64_ib-intel@18.0.2.cmake  toss_4_x86_64_ib-clang@14.0.6.cmake  toss_4_x86_64_ib-gcc@10.3.1.cmake
scripts/: make_release_tarball.sh  update_copyright_date.sh
src/: CMakeLists.txt
src/examples/: CMakeLists.txt  common_plane.cpp  common_plane_gpu.cpp  domain_redecomp.cpp  element_matrix_redecomp.cpp  examples_common.hpp  gpu_test.cpp  hip_test.cpp  matrix_redecomp.cpp  mfem_common_plane.cpp  mfem_contact_detect.cpp  mfem_mortar_lm_patch.cpp  mfem_mortar_lm_patch_gpu.cpp  mortar_lm_patch_test.cpp  multidomain_redecomp.cpp  quadrature_matrix_redecomp.cpp  simple_submesh_redecomp.cpp  simple_tribol_interface.F  sparse_matrix_redecomp.cpp  tet_test.cpp
src/redecomp/: CMakeLists.txt  MultiRedecomp.cpp  MultiRedecomp.hpp  README.md  RedecompMesh.cpp  RedecompMesh.hpp  RedecompTransfer.cpp  RedecompTransfer.hpp  redecomp.hpp
src/redecomp/common/: TypeDefs.hpp
src/redecomp/partition/: PartitionElements.cpp  PartitionElements.hpp  PartitionEntity.hpp  PartitionMethod.cpp  PartitionMethod.hpp  Partitioner.cpp  Partitioner.hpp  RCB.cpp  RCB.hpp
src/redecomp/transfer/: GridFnTransfer.hpp  MatrixTransfer.cpp  MatrixTransfer.hpp  QuadratureMatrixTransfer.cpp  QuadratureMatrixTransfer.hpp  SparseMatrixTransfer.cpp  SparseMatrixTransfer.hpp  TransferByElements.cpp  TransferByElements.hpp  TransferByNodes.cpp  TransferByNodes.hpp
src/redecomp/utils/: ArrayUtility.hpp  BisecTree.hpp  MPIArray.hpp  MPIUtility.cpp  MPIUtility.hpp
src/tests/: CMakeLists.txt  mfem_smoke.cpp  redecomp_massmatrix.cpp  redecomp_multitransfer.cpp  redecomp_rectmatrix.cpp  redecomp_sparsematrix.cpp  redecomp_transfer.cpp  tribol_check_tpl.cpp  tribol_common_plane_gap_rate.cpp  tribol_common_plane_geom_failures.cpp  tribol_common_plane_penalty.cpp  tribol_comp_geom.cpp  tribol_coupling_scheme.cpp  tribol_coupling_scheme_manager.cpp  tribol_enforcement_options.cpp  tribol_execution_modes.cpp  tribol_hex_mesh.cpp  tribol_inv_iso.cpp  tribol_iso_integ.cpp  tribol_math.cpp  tribol_mfem_common_plane.cpp  tribol_mfem_mortar_lm.cpp  tribol_mortar_data_geom.cpp  tribol_mortar_data_weights.cpp  tribol_mortar_force.cpp  tribol_mortar_gap.cpp  tribol_mortar_jacobian.cpp  tribol_mortar_lm_patch_test.cpp  tribol_mortar_sparse_weights.cpp  tribol_mortar_wts.cpp  tribol_nodal_nrmls.cpp  tribol_quad_integ.cpp  tribol_tet_mesh.cpp  tribol_timestep_vote.cpp  tribol_twb_integ.cpp
src/tribol/: CMakeLists.txt  config.hpp.in
src/tribol/common/: ArrayTypes.hpp  BasicTypes.hpp  Containers.hpp  ExecModel.hpp  LoopExec.hpp  Parameters.hpp  logger.hpp  loop_exec.hpp  types.hpp.in
src/tribol/geom/: ContactPlane.cpp  ContactPlane.hpp  ContactPlaneManager.cpp  ContactPlaneManager.hpp  GeomUtilities.cpp  GeomUtilities.hpp
src/tribol/integ/: FE.cpp  FE.hpp  Integration.cpp  Integration.hpp
src/tribol/interface/: CMakeLists.txt  mfem_tribol.cpp  mfem_tribol.hpp  simple_tribol.cpp  simple_tribol.hpp  simple_tribol_shroud.yaml  test_mesh_shroud.yaml  tribol.cpp  tribol.hpp
src/tribol/interface/c_fortran/: typesTRIBOL_SIMPLE.h  typesTRIBOL_TEST_MESH.h  wrapTRIBOL_SIMPLE.cpp  wrapTRIBOL_SIMPLE.h  wrapTRIBOL_TEST_MESH.cpp  wrapTestMesh.cpp  wrapTestMesh.h  wrapftribol_simple.F  wrapftribol_test_mesh.F
src/tribol/interface/yaml/: tribol_test_mesh_types.yaml
src/tribol/mesh/: CouplingScheme.cpp  CouplingScheme.hpp  CouplingSchemeManager.cpp  CouplingSchemeManager.hpp  InterfacePairs.cpp  InterfacePairs.hpp  MeshData.cpp  MeshData.hpp  MeshManager.cpp  MeshManager.hpp  MethodCouplingData.cpp  MethodCouplingData.hpp  MfemData.cpp  MfemData.hpp
src/tribol/physics/: AlignedMortar.cpp  AlignedMortar.hpp  CommonPlane.cpp  CommonPlane.hpp  Mortar.cpp  Mortar.hpp  NodalPenalty.hpp  Physics.cpp  Physics.hpp
src/tribol/search/: InterfacePairFinder.cpp  InterfacePairFinder.hpp
src/tribol/utils/: Algorithm.hpp  ContactPlaneOutput.cpp  ContactPlaneOutput.hpp  DataManager.hpp  Math.cpp  Math.hpp  TestUtils.cpp  TestUtils.hpp
(+40 files in other folders)
